Adding NavBar and NavBar animations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <div class="logo">GSAP Hero</div>
+        <div class="right-items">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Options</a></li>
+          <li><a href="#">About</a></li>
+        </div>
+      </ul>
+    </nav>
     <div class="container">
       <div class="flex-vertcal">
         <h1>Code</h1>
@@ -17,9 +28,6 @@
           <button>Stagger</button>
           <button>Effect</button>
           <button>Showcase</button>
-          <!-- <button>Here</button> -->
-          <!-- <button>Once</button>
-          <button>Again</button> -->
         </div>
       </div>
       <div class="image-wrapper">
