--- a/index.html
+++ b/index.html
@@ -34,12 +34,21 @@
         <img src="./picture1.jpg" alt="hero-picture" />
       </div>
     </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+    <div class="container">
+      <div class="main">
+        <div class="hidden">
+          <h1>ScrollTrigger</h1>
+        </div>
+        <div class="hidden">
+          <h1 class="green">ClipPath</h1>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.0/ScrollTrigger.min.js"></script>
+
     <script src="/index.js"></script>
   </body>
 </html>
