Added paragraph and background Image clipPath animation

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     </div>
     <div class="container">
       <div class="main">
-        <div class="hidden">
-          <h1>ScrollTrigger</h1>
-        </div>
-        <div class="hidden">
-          <h1 class="green">ClipPath</h1>
-        </div>
+        <h1 class="hidden" style="color: white">ScrollTrigger</h1>
+        <h1 class="hidden" style="color: rgb(90, 218, 194)">ClipPath</h1>
+        <p class="hidden" style="margin-top: 10vh; color: rgb(234, 230, 224)">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae
+          assumenda consequatur ad culpa rem sequi non voluptates cupiditate at!
+          Doloremque sint optio hic, laborum quos nobis? Vero, deserunt deleniti
+          dolorem in voluptatum hic eveniet quos, iure repudiandae iste a modi!
+        </p>
       </div>
     </div>
     <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
